--- a/src/Resources/styles/front/common/components/list/articles.less
+++ b/src/Resources/styles/front/common/components/list/articles.less
@@ -71,6 +71,7 @@
             width: 100%;
             text-align: center;
             overflow: hidden;
+            margin-bottom: 10px;
 
             font-size: 0;
             border-radius: @radius;
@@ -78,6 +79,7 @@
             @media @query-xl {
                 width: @list-articles-item-image-width;
                 margin-right: @list-articles-item-image-gap;
+                margin-bottom: 0;
             }
 
             img {
@@ -100,16 +102,19 @@
             &__title {
                 margin-top: 10px;
                 margin-bottom: 5px;
-                line-height: 30px;
+                line-height: 21px;
 
                 color: @color-base;
                 font-size: 18px;
                 font-weight: 700;
-                text-decoration: none;
-                text-transform: uppercase;
+                text-decoration: underline;
 
                 @media @query-vl {
                     margin-top: 0;
+                }
+
+                .list-articles--white & {
+                    color: @color-f;
                 }
             }
 
@@ -118,12 +123,24 @@
                 margin-bottom: 10px;
 
                 color: @color-base;
+                font-size: 16px;
+                font-family: @font-alt;
+
+                .list-articles--white & {
+                    opacity: 0.6;
+
+                    color: @color-f;
+                }
             }
 
             &__date {
                 font-size: 12px;
                 font-weight: 700;
                 font-family: @font-alt;
+
+                .list-articles--white & {
+                    color: @color-f;
+                }
             }
         }
     }
