--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -5,7 +5,7 @@
             {% set domainId = getDomain().id %}
 
             <div class="web__line">
-                <div class="web__container web__container--light web__container--footer">
+                <div class="web__container web__container--border-radius web__container--light">
                     <div class="footer-top">
                         <div class="footer-top__scroll-top">
                             <a href="#top" data-space-above-position="0" class="btn btn--secondary btn--big js-scroll-to-position">
