--- a/templates/Front/Layout/header.html.twig
+++ b/templates/Front/Layout/header.html.twig
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="web__container web__container--dark web__container--header">
+    <div class="web__container web__container--border-radius web__container--dark">
         <header class="header {{ block('headerClass') }}">
             <div class="header__logo">
                 {% block logo %}
