--- a/src/Resources/styles/front/common/components/list/tags.less
+++ b/src/Resources/styles/front/common/components/list/tags.less
@@ -1,30 +1,22 @@
+@list-tags-item-gap: 5px;
+
 .list-tags {
-    display: inline;
-    text-align: left;
-
-    .box-detail__params & {
-        width: 100%;
-
-        @media @query-vl {
-            width: calc(~"@{calc-base} - @{box-detail-params-title-width}");
-        }
-    }
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: -@list-tags-item-gap;
 
     &__tag {
-        display: inline-block;
-        margin: 5px 0;
-        padding: 8px 10px 7px;
-
-        background-color: @color-light;
-        border-radius: @radius;
-        color: @color-gray;
-        font-size: @font-size-extra-small;
-        font-weight: 700;
-        text-decoration: none;
+        line-height: 18px;
+        padding: 1px 10px;
+        margin-bottom: 10px;
+        margin-left: @list-tags-item-gap;
         text-transform: uppercase;
-
-        @media @query-xl {
-            margin: 0 5px 5px 0;
-        }
+        
+        color: @color-f;
+        font-size: 11px;
+        font-weight: 700;
+        border-radius: 10px;
+        background-color: @color-add;
     }
 }
