--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -68,7 +68,6 @@
         flex-direction: column;
         order: 1;
         width: 100%;
-        padding: 0 @web-padding-small;
 
         @media @query-lg {
             width: calc(~"100% - @{footer-top-links-width}");
@@ -224,7 +223,7 @@
     display: flex;
     flex-direction: column;
     height: @footer-banner-height-mobile;
-    margin: 30px @web-padding-small;
+    margin: 30px 0;
     padding: 30px 20px;
 
     border-radius: @radius-big;
