--- a/src/Resources/styles/front/common/layout/layout.less
+++ b/src/Resources/styles/front/common/layout/layout.less
@@ -78,6 +78,12 @@ img {
             margin: 0 auto;
         }
 
+        &--no-padding {
+            @media @query-vl {
+                padding: 0;
+            }
+        }
+
         &--transparent {
             background-color: transparent;
         }
