--- a/src/Resources/styles/front/common/components/in/place.less
+++ b/src/Resources/styles/front/common/components/in/place.less
@@ -6,13 +6,14 @@
     overflow: hidden;
 
     font-size: 0;
-    border-radius: @radius;
+    border-radius: @radius-big;
 
     &--preCategory, &--category {
         display: none;
         
         @media @query-lg {
             display: block;
+            margin-bottom: 30px;
         }
     }
 }
