--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -19,35 +19,15 @@
 
 {% block main_content %}
     <div class="box-list">
-        {% if visibleChildren is not empty %}
-            <div class="web__line">
-                <div class="web__container">
-                    {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'cssClass': 'list-categories--six-on-row'} %}
-                </div>
-            </div>
-        {% endif %}
-
         <div class="web__line">
             <div class="web__container">
-                <div class="box-list__row">
-                    <div class="box-list__row__column">
-                        <h1 class="box-list__title">
-                            {{ category.getSeoH1(domain.id)|default(category.name) }}
-                        </h1>
-                    </div>
-                    <div class="box-list__row__column box-list__row__column--order">
-                        {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction')) }}
-                    </div>
-                </div>
-            </div>
-        </div>
+                <h1 class="box-list__title">
+                    {{ category.getSeoH1(domain.id)|default(category.name) }}
+                </h1>
 
-        <div class="web__line">
-            <div class="web__container">
                 {{ render(controller('App\\Controller\\Front\\AdvertController:boxAction', {'advert' : category.getAdvert()})) }}
             </div>
         </div>
-
 
         <div class="web__line">
             <div class="web__container">
@@ -71,6 +51,12 @@
                     {% endif %}
 
                     <div class="box-list__content js-product-list-ajax-filter-products-with-controls">
+                        <div class="box-list__categories">
+                            {% if visibleChildren is not empty %}
+                                {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren} %}
+                            {% endif %}
+                        </div>
+                        {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction')) }}
                         {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResult, filterFormSubmitted: filterFormSubmitted} %}
                     </div>
                 </div>
