--- a/src/Resources/styles/front/common/layout/layout.less
+++ b/src/Resources/styles/front/common/layout/layout.less
@@ -69,17 +69,14 @@ img {
             margin: 0 @web-padding-small;
         }
 
-        @media @query-vl {
-            padding: 0 @web-padding;
-        }
-
         @media @query-xl {
             width: @web-width;
+            padding: 0 @web-padding;
             margin: 0 auto;
         }
 
         &--no-padding {
-            @media @query-vl {
+            @media @query-xl {
                 padding: 0;
             }
         }
