design: add style for filters

--- a/src/Resources/styles/front/common/core/form/custom-inputs.less
+++ b/src/Resources/styles/front/common/core/form/custom-inputs.less
@@ -1,6 +1,6 @@
 @custom-inputs-margin-left: 30px;
 @custom-inputs-filter-margin-left: 25px;
-@custom-inputs-font-size: @font-size-small;
+@custom-inputs-font-size: @font-size;
 @custom-inputs-icon-size: 20px;
 @custom-inputs-link-color: @color-base;
 @custom-inputs-link-color-hover: @color-orange;
@@ -24,8 +24,8 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
         display: inline-block;
         vertical-align: middle;
         padding-left: @custom-inputs-margin-left;
-        line-height: @custom-inputs-icon-size + 3px;
-        min-height: @custom-inputs-icon-size + 3px;
+        line-height: @custom-inputs-icon-size;
+        min-height: @custom-inputs-icon-size;
 
         font-size: @custom-inputs-font-size;
         cursor: pointer;
@@ -42,12 +42,12 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
             background-repeat: no-repeat;
             background-position: left top;
             background-size: 3*@custom-inputs-icon-size 2*@custom-inputs-icon-size;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
         }
 
         &:hover {
             &:before {
                 background-position-x: center;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
             }
         }
     }
@@ -56,7 +56,6 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
         & + .css-checkbox__image, & + .css-radio__image {
             &:before {
                 background-position-x: center;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
             }
         }
     }
@@ -65,15 +64,6 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
         & + .css-checkbox__image, & + .css-radio__image {
             &:before {
                 background-position-y: bottom;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
-            }
-        }
-
-        &:disabled {
-            & + .css-checkbox__image, & + .css-radio__image {
-                &:before {
-                    box-shadow: none;
-                }
             }
         }
     }
@@ -84,23 +74,11 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
                 cursor: no-drop;
                 background-position-x: right;
             }
-
-            &:hover {
-                &:before {
-                    box-shadow: none;
-                }
-            }
         }
 
         & ~ .css-checkbox__image, & ~ .css-radio__image {
             cursor: no-drop;
             color: @color-inactive;
-
-            &:hover {
-                &:before {
-                    box-shadow: none;
-                }
-            }
         }
     }
 
