--- a/src/Resources/styles/front/common/components/box/list.less
+++ b/src/Resources/styles/front/common/components/box/list.less
@@ -74,7 +74,7 @@
 
     &__filter-opener {
         text-align: center;
-        margin-bottom: @margin-gap;
+        margin: @margin-gap 0;
 
         @media @query-vl {
             display: none;
