--- a/src/Resources/styles/front/common/components/box/price-slider.less
+++ b/src/Resources/styles/front/common/components/box/price-slider.less
@@ -1,13 +1,12 @@
-@box-price-slider-inputs-gap: 5px;
+@box-price-slider-inputs-gap: 8px;
 
-@box-price-slider-form-input-width: 60px;
+@box-price-slider-form-input-width: 65px;
+@box-price-slider-form-input-height: 36px;
 
 .box-price-slider {
     display: flex;
     flex-direction: column;
     margin-bottom: 16px;
-
-    border-radius: @radius-small;
 
     &__form {
         display: flex;
@@ -18,34 +17,25 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            width: @calc-base / 2;
 
             &__text {
                 padding-right: @box-price-slider-inputs-gap;
-
-                font-size: @font-size-small;
-                color: @color-gray;
             }
 
             &__currency {
                 padding-left: @box-price-slider-inputs-gap;
-
-                font-size: @font-size-small;
-                color: @color-gray;
             }
 
             input {
                 padding-right: 3px;
                 padding-left: 3px;
                 text-align: center;
+                width: @box-price-slider-form-input-width;
+                max-width: @box-price-slider-form-input-width;
+                height: @box-price-slider-form-input-height;
                 
                 font-size: @font-size-small;
                 font-weight: 700;
-
-                @media @query-lg {
-                    width: @box-price-slider-form-input-width;
-                    max-width: @box-price-slider-form-input-width;
-                }
 
                 &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
                     color: @color-base;
