design: edit small css issues after BV

--- a/src/Resources/styles/front/common/components/list/reasons-to-buy.less
+++ b/src/Resources/styles/front/common/components/list/reasons-to-buy.less
@@ -27,6 +27,54 @@
             margin-left: @list-reasons-to-buy-item-gap;
         }
 
+        &:nth-child(1) {
+            order: 1;
+
+            @media @query-lg {
+                order: inherit;
+            }
+        }
+
+        &:nth-child(2) {
+            order: 4;
+
+            @media @query-lg {
+                order: inherit;
+            }
+        }
+
+        &:nth-child(3) {
+            order: 2;
+
+            @media @query-lg {
+                order: inherit;
+            }
+        }
+
+        &:nth-child(4) {
+            order: 5;
+
+            @media @query-lg {
+                order: inherit;
+            }
+        }
+
+        &:nth-child(5) {
+            order: 3;
+
+            @media @query-lg {
+                order: inherit;
+            }
+        }
+
+        &:nth-child(6) {
+            order: 6;
+
+            @media @query-lg {
+                order: inherit;
+            }
+        }
+
         &__icon {
             display: flex;
             justify-content: center;
@@ -39,6 +87,12 @@
             margin: 0;
 
             font-size: @font-size-small;
+
+            br {
+                @media @query-sm {
+                    display: none;
+                }
+            }
 
             &__link {
                 text-decoration: underline;
