--- a/templates/Front/Content/LastVisitedProducts/list.html.twig
+++ b/templates/Front/Content/LastVisitedProducts/list.html.twig
@@ -5,7 +5,7 @@
         <div class="web__container">
             <div class="box-last-visited">
                 <h3 class="box-last-visited__title">
-                    {{ 'Naposledy prohlížené produkty'|trans }}
+                    {{ 'Naposledy navštívené produkty'|trans }}
                 </h3>
 
                 {{ productList.lastVisitedList(productViews, 'h3', 'last-visited') }}
